tests-integration/fixtures/checking/115_empty_do_block/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
pure :: forall (a :: Type). (a :: Type) -> Effect (a :: Type)
bind ::
  forall (a :: Type) (b :: Type).
    Effect (a :: Type) -> ((a :: Type) -> Effect (b :: Type)) -> Effect (b :: Type)
discard ::
  forall (a :: Type) (b :: Type).
    Effect (a :: Type) -> ((a :: Type) -> Effect (b :: Type)) -> Effect (b :: Type)
test :: ???

Types
Effect :: Type -> Type

Roles
Effect = [Nominal]

Diagnostics
error[EmptyDoBlock]: Empty do block
  --> 9:8..9:10
  |
9 | test = do
  |        ^~
error[CannotUnify]: Cannot unify 'Type' with '???'
  --> 9:1..9:10
  |
9 | test = do
  | ^~~~~~~~~
